# rob1

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  README.txt  SamplePlugin.cpp  SamplePlugin.hpp  SamplePlugin.ui  cmake_install.cmake  moc_SamplePlugin.cxx  qrc_resources.cxx  ui_SamplePlugin.h
